weaver/tests/network-setups/test/fabric/k8s/postgres-secret.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: v1
kind: Secret
metadata:
  name: postgresql-network1
  annotations:
    app.kubernetes.io/component: "CA DB"
  labels:
    app: postgresql
type: Opaque
data:
  postgresql-password:  "cGdhZG1pbnB3"
