weaver/tests/network-setups/test/fabric/k8s/pvc-network1-secrets.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: network1-secrets
spec:
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 100Mi
  storageClassName: nfs-storage
  volumeMode: Filesystem
